fix(geomap): z-index issues with toolbar and buttons (closes #8649)

--- a/apps/client/src/widgets/collections/geomap/index.css
+++ b/apps/client/src/widgets/collections/geomap/index.css
@@ -7,7 +7,7 @@
 
   > .collection-properties {
     position: relative;
-    z-index: 2000;
+    z-index: 998;
   }
 }
 
@@ -22,7 +22,7 @@
 
 .leaflet-top,
 .leaflet-bottom {
-  z-index: 997;
+  z-index: 997 !important;
 }
 
 .geo-view.placing-note .geo-map-container {
